--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This is my personal blog where I share my experience that I learned or want to learn. For more information about me please [visit](arif332.github.io).
+This is my personal blog where I share my experience that I learned or want to learn. For more information about me please [visit](https://arif332.github.io).
 
 # Posts
