--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This is my personal blog where I share my experience that I learned or want to learn. For more information about me please <a href="arif332.github.io">visit</a>.</p>
+        <div class="home"><p>This is my personal blog where I share my experience that I learned or want to learn. For more information about me please <a href="https://arif332.github.io">visit</a>.</p>
 
 <h1 id="posts">Posts</h1>
 
